# KaZeMathLib

./: .gitignore  CMakeLists.txt  README.md  library.h
.github/workflows/: cmake.yml
MathLib/: Vector.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
MathLib/Matrix/: Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp
MathLib/Quaternion/: Quaternion.cpp
MathLib/Tests/: MainTest.cpp  Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp  VectorTests.cpp
MathLib/Tests/Matrix/: Matrix2x2Tests.cpp  Matrix3x3Tests.cpp  Matrix4x4Tests.cpp
MathLib/Tests/Quaternion/: QuaternionTests.cpp
MathLib/Tests/Vector/: Vector2DTests.cpp  Vector3DTests.cpp  Vector4DTests.cpp
MathLib/Vector/: Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
